--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -48,7 +48,7 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #2200FF !default;
+$brand-primary:             #5036f9 !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
@@ -104,7 +104,7 @@ $border-width: 1px !default;
 //
 // Settings for the `<body>` element.
 
-$body-bg:    white !default;
+$body-bg:    #fff !default;
 $body-color: $gray-dark !default;
 
 
