--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -48,7 +48,7 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #5036f9 !default;
+$brand-primary:             #4e3faf !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
