--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -68,7 +68,6 @@ header {
 
 footer {
   font-size: 1.3rem;
-  margin-top: 3rem;
 }
 
 .card {
@@ -95,7 +94,7 @@ body {
 
 .solid-bar {
   background: darken($gray-lighter, 5);
-  padding: 1rem 0;
+  padding: .5rem 0;
   margin: 0 -15px;
 }
 
